# FastSurfer

./: .codespellignore  .dockerignore  .gitignore  .travis.yml  CONTRIBUTING.md  EDITING.md  INSTALL.md  README.md  SECURITY.md  SYSTEM_RECOMMENDATIONS.md  brun_fastsurfer.sh  environment_gpu.yml  fastsurfer.toml  fastsurfer_env_cpu.yml  fastsurfer_env_gpu.yml  fastsurfer_env_reconsurf.yml  index.html  long_fastsurfer.sh  notice.txt  pyproject.toml  requirements.cpu.txt  requirements.in  requirements.mac.txt  requirements.txt  requirements_cpu.txt  requirements_gpu.txt  requirements_update.txt  run_fastsurfer.py  run_fastsurfer.sh  run_fastsurfer_wrapper.sh  srun_fastsurfer.sh  stools.sh  ubuntu-python.def
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md  questions-help-support.md
.github/workflows/: QUICKTEST.md  code-style.yml  deploy.yml  dirac-docker.yml  dirac-test.yml  doc.yml  docker_build.yml  fastsurfer_build.yml  fastsurfer_docker.yml  fastsurfer_singularity.yaml  quicktest.yaml  quicktest_runner.yaml  tests.yml
CCNet/: README.md  download_checkpoints.py  generate_hdf5.py  inference.py  quick_qc.py  run_model.py  run_prediction.py  segstats.py  train.py  version.py
CCNet/config/: CCNet_axial.yaml  CCNet_coronal.yaml  CCNet_sagittal.yaml  CC_ColorLUT.tsv  checkpoint_paths.yaml  defaults.py
CCNet/data_loader/: augmentation.py  conform.py  data_utils.py  dataset.py  loader.py
CCNet/models/: interpolation_layer.py  losses.py  networks.py  sub_module.py
CCNet/utils/: __init_.py  checkpoint.py  load_config.py  logging.py  meters.py  misc.py  parser_defaults.py
CerebNet/: README.md  __init__.py  apply_warp.py  inference.py  run_prediction.py
CerebNet/config/: CerebNet2FreeSurfer.json  CerebNet2Sagittal.json  CerebNet_ColorLUT.tsv  __init__.py  cerebnet.py  checkpoint_paths.yaml  dataset.py
CerebNet/data_loader/: __init__.py  augmentation.py  data_utils.py  dataset.py  loader.py
CerebNet/datasets/: __init__.py  generate_hdf5.py  load_data.py  realistic_deformations.sh  utils.py  wm_merge_clean.py
CerebNet/models/: __init__.py  networks.py  sub_module.py
CerebNet/utils/: __init__.py  checkpoint.py  load_config.py  lr_scheduler.py  meters.py  metrics.py  misc.py
Docker/: Dockerfile  Dockerfile_CPU  Dockerfile_FastSurferCNN  Dockerfile_FastSurferCNN_AMD  Dockerfile_FastSurferCNN_CPU  Dockerfile_reconsurf  README.md  build.py  conda_pack.sh  docker_build.sh  entrypoint.sh  install_env.py  install_env.sh  install_fs_pruned.sh  python-s
Documentation/: TRAINING_DATA.md
FastSurferCNN/: README.md  __init__.py  download_checkpoints.py  eval.py  eval_with_context_manager.py  eval_with_tracker.py  experiment_dashboard.ipynb  generate_hdf5.py  inference.py  mri_brainvol_stats.py  mri_segstats.py  quick_qc.py  reduce_to_aseg.py  run_eval.sh  run_inference.sh  run_inference_singularity.sh  run_inference_singularity_cpu.sh  run_inference_singularity_gpu.sh  run_inference_ukb.sh  run_inference_ukb_cpu.sh  run_inference_ukb_gpu.sh  run_model.py  run_prediction.py  segstats.py  train.py  version.py
FastSurferCNN/config/: FastSurferVINN.yaml  FastSurferVINN_axial.yaml  FastSurferVINN_coronal.yaml  FastSurferVINN_sagittal.yaml  FastSurfer_ColorLUT.tsv  FreeSurferColorLUT.txt  checkpoint_paths.yaml  defaults.py  global_var.py
FastSurferCNN/data_loader/: __init__.py  augmentation.py  conform.py  data_utils.py  dataset.py  generate_data_hdf5.py  load_neuroimaging_data.py  loader.py
FastSurferCNN/models/: interpolation_layer.py  losses.py  networks.py  optimizer.py  solver.py  sub_module.py
FastSurferCNN/utils/: __init_.py  __init__.py  arg_types.py  brainvolstats.py  checkpoint.py  common.py  dataclasses.py  download_check_point.py  load_config.py  logging.py  logging_script.py  lr_scheduler.py  mapper.py  meters.py  metrics.py  misc.py  parser_defaults.py  run_tools.py  threads.py
HypVINN/: README.md  __init__.py  inference.py  run_pipeline.py  run_prediction.py  run_preproc.py
HypVINN/config/: HypVINN_ColorLUT.txt  HypVINN_axial_v1.0.0.yaml  HypVINN_axial_v1.1.0.yaml  HypVINN_coronal_v1.0.0.yaml  HypVINN_coronal_v1.1.0.yaml  HypVINN_sagittal_v1.0.0.yaml  HypVINN_sagittal_v1.1.0.yaml  checkpoint_paths.yaml  hypvinn.py  hypvinn_files.py  hypvinn_global_var.py
HypVINN/data_loader/: data_utils.py  dataset.py
HypVINN/models/: networks.py
HypVINN/test/: create_multiple_subjects_file_for_fastsurfer.py  fastsufer_cmd  orientation_test.py  run_hyvinn.py  run_hyvinn_fs.py  runn_fastsurfer.py
HypVINN/utils/: N4_bias_correct.py  __init__.py  checkpoint.py  img_processing_utils.py  load_config.py  misc.py  (+4 more)
Singularity/: README.md  fastsurfer.def  fastsurfer_cnn.def  fastsurfer_cnn_cpu.def  fastsurfer_cpu.def  reconsurf.def
Tutorial/: Complete_FastSurfer_Tutorial.ipynb  README.md  Tutorial_FastSurferCNN_QuickSeg.ipynb
data/: axial_train.hdf5  axial_val.hdf5  coronal_train.hdf5  coronal_val.hdf5  sagittal_train.hdf5  sagittal_val.hdf5
dev/: genindex.html  objects.inv  searchindex.js
doc/: START.md  conf.py  index.rst  references.bib
env/: export_pip-r.sh  fastsurfer.yml  fastsurfer_reconsurf.yml
recon_surf/: N4_bias_correct.py  README.md  align_points.py  align_seg.py  bias_field_correction.py  create_annotation.py  extract_recon-surf_command_times.py  extract_recon-surf_command_times_debug.py  extract_recon-surf_command_times_yaml.py  fs_balabels.py  fs_time  functions.sh  image_io.py  lh.DKTatlaslookup.txt  long_prepare_template.sh  lta.py  make_upright  map_surf_label.py  paint_cc_into_pred.py  quick_qc.py  read_geometry.py  recon-surf.sh  recon-surfreg.sh  reduce_to_aseg.py  rewrite_mc_surface.py  rewrite_oriented_surface.py  rh.DKTatlaslookup.txt  rotate_sphere.py  sample_parc.py  smooth_aparc.py  spherically_project.py  spherically_project_wrapper.py  talairach-reg.sh
rough_work/: error_file.yaml  file_existence.py
src/: eval.py
stable/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
test/: __init__.py  error_file.yaml  files.yaml  test_error_messages.py  test_file_existence.py
(+162 files in other folders)
