[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'fastsurfer'
version = '2.3.0-dev'
description = 'A fast and accurate deep-learning based neuroimaging pipeline'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.10'
authors = [{name = 'Martin Reuter et al.'}]
maintainers = [{name = 'FastSurfer Developers'}]
keywords = [
    'python',
    'Deep learning',
    'Segmentation',
    'Brain segmentation',
    'Brain analysis',
    'volumetry',
]
classifiers = [
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Natural Language :: English',
    'License :: OSI Approved :: Apache Software License',
    'Intended Audience :: Science/Research',
]
dependencies = [
    'h5py>=3.7',
    'lapy>=0.4.1',
    'matplotlib>=3.5.1',
    'nibabel>=3.2.2',
    'numpy>=1.21',
    'pandas>=1.4.3',
    'torch>=1.12.0',
    'pyyaml>=6.0',
    'scipy>=1.8.0',
    'yacs>=0.1.8',
    'simpleitk>=2.1.1',
    'scipy>=1.8.0',
    'tensorboard>=2.9.1',
    'torchio>=0.18.83',
    'tqdm>=4.64',
]

[project.optional-dependencies]
doc = [
    'furo!=2023.8.17',
    'matplotlib',
    'memory-profiler',
    'myst-parser',
    'numpydoc',
    'sphinx!=7.2.*',
    'sphinxcontrib-bibtex',
    'sphinx-copybutton',
    'sphinx-design',
    'sphinx-gallery',
    'sphinx-issues',
    'pypandoc',
    'nbsphinx',
    'IPython', # For syntax highlighting in notebooks
    'ipykernel',
    'scikit-image',
    'torchvision',
    'scikit-learn',
]
style = [
    'bibclean',
    'black',
    'codespell',
    'isort',
    'pydocstyle[toml]',
    'ruff',
]
all = [
    'fastsurfer[doc]',
    'fastsurfer[style]',
]
full = [
    'fastsurfer[all]',
]

[project.urls]
homepage = 'https://fastsurfer.org'
documentation = 'https://fastsurfer.org'
source = 'https://github.com/Deep-MI/FastSurfer'
tracker = 'https://github.com/Deep-MI/FastSurfer/issues'

[tool.setuptools]
packages = ['FastSurferCNN','CerebNet','recon_surf']

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | .github
    | setup.py
    | Tutorial/
    | checkpoints/
    | doc/
    | env/
    | images/
)
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 88
py_version = 310
extend_skip_glob = [
    'setup.py',
    'Tutorial/*',
    'checkpoints/*',
    'doc/*',
    'env/*',
    'images/*',
]

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^FastSurferCNN.*,^CerebNet.*,^recon-surf.*'
add_ignore = 'D100,D104,D107'

[tool.ruff]
line-length = 88
extend-exclude = [
    "doc",
    "build",
    "setup.py",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = []

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
    '**/__init__.py',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
]
precision = 2

